# pico-template

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pico_sdk_import.cmake
src/: main.c
